improvements to the phase patches

--- a/_units/01.md
+++ b/_units/01.md
@@ -273,14 +273,15 @@ description="Two sinusoids, one with variable phase with respect to the other." 
 {% assign fixedspectname = mutor_patch_pfx | append: "fixedspect" %}
 {% assign moveablespectname = mutor_patch_pfx | append: "moveablespect" %}
 {% assign sumspectname = mutor_patch_pfx | append: "sumspect" %}
-{% assign fixedmultname = mutor_patch_pfx | append: "fixedmult" %}
-{% assign moveablemultname = mutor_patch_pfx | append: "moveablemult" %}
+{% assign fixedgainname = mutor_patch_pfx | append: "fixedgain" %}
+{% assign moveablegainname = mutor_patch_pfx | append: "moveablegain" %}
+{% assign gainslidername = mutor_patch_pfx | append: "gainslider" %}
 
 {% include p/oscillator name=fixedoscillatorname freq="344.53125" type="sine" %}
 {% include p/oscillator name=moveableoscillatorname freq="344.53125" type="sine" %}
-{% include p/multiply name=fixedmultname factor=".5" %}
-{% include p/multiply name=moveablemultname factor=".5" %}
-<table><tr><td style="text-align:left;">
+{% include p/gain name=fixedgainname gain=".1" %}
+{% include p/gain name=moveablegainname gain=".1" %}
+<table><tr><td colspan=3 style="text-align:left;">
 {% comment %}
 {% include p/number name=freqnumberboxname max="880" def="375" label="frequency in Hz: " %}
 {% endcomment %}
@@ -288,30 +289,34 @@ description="Two sinusoids, one with variable phase with respect to the other." 
 {% include p/slider name=phaseslidername min="0" max="360" width="200px" height="20px" %}
 </td></tr><tr><td>
 {% include p/scope name=fixedscopename samps_per_pixel=1 width="290px" %}
+</td><td>
 {% include p/spectroscope name=fixedspectname gain="500." width="290px" %}
+</td><td>
 </td></tr><tr><td>
 {% include p/scope name=moveablescopename samps_per_pixel=1 width="290px" %}
+</td><td>
 {% include p/spectroscope name=moveablespectname gain="500." width="290px" %}
+</td><td>
 </td></tr><tr><td>
 {% include p/scope name=sumscopename samps_per_pixel=1 width="290px" %}
+</td><td>
 {% include p/spectroscope name=sumspectname gain="500." width="290px" %}
-</td></tr><tr><td>
+</td><td>
+{% include p/slider name=gainslidername min="0" max="0.5" %}
+</td></tr><tr><td colspan=2 style="text-align:left">
 {% include p/transport name=transportname %}
 </td></tr></table>
-{% include p/connect outlet=fixedoscillatorname inlet=fixedmultname %}
-{% include p/connect outlet=moveableoscillatorname inlet=moveablemultname %}
-{% include p/connect outlet=fixedmultname inlet=fixedscopename %}
-{% include p/connect outlet=fixedmultname inlet=fixedspectname %}
-{% include p/connect outlet=moveablemultname inlet=moveablescopename %}
-{% include p/connect outlet=moveablemultname inlet=moveablespectname %}
-{% include p/connect outlet=fixedmultname inlet=sumscopename %}
-{% include p/connect outlet=moveablemultname inlet=sumscopename %}
-{% include p/connect outlet=fixedmultname inlet=sumspectname %}
-{% include p/connect outlet=moveablemultname inlet=sumspectname %}
+{% include p/connect outlet=fixedoscillatorname inlet=fixedgainname %}
+{% include p/connect outlet=moveableoscillatorname inlet=moveablegainname %}
+{% include p/connect outlet=fixedgainname inlet=fixedscopename %}
+{% include p/connect outlet=fixedgainname inlet=fixedspectname %}
+{% include p/connect outlet=moveablegainname inlet=moveablescopename %}
+{% include p/connect outlet=moveablegainname inlet=moveablespectname %}
+{% include p/connect outlet=fixedgainname inlet=sumscopename %}
+{% include p/connect outlet=moveablegainname inlet=sumscopename %}
+{% include p/connect outlet=fixedgainname inlet=sumspectname %}
+{% include p/connect outlet=moveablegainname inlet=sumspectname %}
 <script type="text/javascript">
-// {{ freqnumberboxname }}.addEventListener('change', (e)=>{
-// 	{{ fixedoscillatorname }}.frequency.value = parseFloat(e.target.value);
-// });
 {{ phasenumberboxname }}.addEventListener('change', (e)=>{
 	const f = parseFloat(e.target.value);
 	{{ moveableoscillatorname }}.phase = f;
@@ -324,6 +329,19 @@ function phasesliderevent(e)
 }
 {{ phaseslidername }}.addEventListener('mousedown', phasesliderevent);
 {{ phaseslidername }}.addEventListener('mousemove', phasesliderevent);
+
+{{ gainslidername }}.addEventListener('mousedown', (e)=>{
+	{{ fixedgainname }}.gain.rampTo({{ gainslidername }}_value, .1);
+	{{ moveablegainname }}.gain.rampTo({{ gainslidername }}_value, .1);
+})
+{{ gainslidername }}.addEventListener('mousemove', (e)=>{
+	{{ fixedgainname }}.gain.rampTo({{ gainslidername }}_value, .1);
+	{{ moveablegainname }}.gain.rampTo({{ gainslidername }}_value, .1);
+})
+
+{{ fixedgainname }}.toDestination();
+{{ moveablegainname }}.toDestination();
+{{ gainslidername }}_set(0.1);
 </script>
 
 {% include p/end %}
@@ -346,9 +364,88 @@ tell us much about how a signal will actually *sound*. Below, we will
 look at another representation of signals, the *frequency-domain*, but
 before that, let's look at more complex waveforms.
 
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/MUTOR_DoesPhaseMatter2.png" 
 description="Changes in phase do not always produce changes in our perception 
 of a sound." %}
+{% endcomment %}
+{% include begin-figure description="Changes in phase do not always produce changes in our perception of a sound." %}
+{% include p/begin %}
+
+{% assign nosc = 6 %}
+
+{% for i in (1..nosc) %}
+{% capture oname %}{{ mutor_patch_pfx }}oscillator{{ i }}{% endcapture %}
+{% capture freq %}{% cycle "344.53125", "689.0625", "1033.59375", "1378.125", "1722.65625", "2067.1875" %}{% endcapture %}
+{% include p/oscillator name=oname freq=freq type="sine" %}
+
+{% capture gname %}{{ mutor_patch_pfx }}gain{{ i }}{% endcapture %}
+{% comment %}
+{% capture gain %}{% cycle 1. | divided_by: nosc, "0", "0", "0", "0", "0" %}{% endcapture %}
+{% endcomment %}
+{% assign gain = 0.5 | divided_by: nosc %}
+{% include p/gain name=gname gain=gain type="sine" %}
+{% endfor %}
+
+{% assign scopename = mutor_patch_pfx | append: "scope" %}
+{% assign spectname = mutor_patch_pfx | append: "spect" %}
+{% assign transportname = mutor_patch_pfx | append: "transport" %}
+
+<table>
+<tr><td style="text-align:left;">
+Gains:
+</td><td style="text-align:right;">
+Phases (0-360):
+</td></tr>
+<tr><td style="text-align:left;">
+{% for i in (1..nosc) %}
+{% capture gsname %}{{ mutor_patch_pfx }}gainslider{{ i }}{% endcapture %}
+{% include p/slider name=gsname min="0." max=".16666667" %}
+{% endfor %}
+</td><td style="text-align:right;">
+{% for i in (1..nosc) %}
+{% capture psname %}{{ mutor_patch_pfx }}phaseslider{{ i }}{% endcapture %}
+{% include p/slider name=psname min="0" max="360" %}
+{% endfor %}
+</td></tr>
+<tr><td colspan="2">
+{% include p/scope name=scopename samps_per_pixel=1 %}
+</td></tr><tr><td colspan="2">
+{% include p/spectroscope name=spectname gain=2500.0 %}
+</td></tr><tr><td colspan="2">
+{% include p/transport name=transportname %}
+</td></tr>
+</table>
+
+{% for i in (1..nosc) %}
+{% capture oname %}{{ mutor_patch_pfx }}oscillator{{ i }}{% endcapture %}
+{% capture gname %}{{ mutor_patch_pfx }}gain{{ i }}{% endcapture %}
+{% capture gsname %}{{ mutor_patch_pfx }}gainslider{{ i }}{% endcapture %}
+{% capture psname %}{{ mutor_patch_pfx }}phaseslider{{ i }}{% endcapture %}
+{% include p/connect outlet=oname inlet=gname %}
+{% include p/connect outlet=gname inlet=scopename %}
+{% include p/connect outlet=gname inlet=spectname %}
+<script type="text/javascript">
+{{ gsname }}.addEventListener('mousedown', (e)=>{
+	{{ gname }}.gain.rampTo({{ gsname }}_value, .1);
+});
+{{ gsname }}.addEventListener('mousemove', (e)=>{
+	{{ gname }}.gain.rampTo({{ gsname }}_value, .1);
+});
+
+{{ psname }}.addEventListener('mousedown', (e)=>{
+	{{ oname }}.phase = {{ psname }}_value;
+});
+{{ psname }}.addEventListener('mousemove', (e)=>{
+	{{ oname }}.phase = {{ psname }}_value;
+});
+
+{{ gname }}.toDestination();
+{{ gsname }}_set({{ 0.5 | divided_by: nosc }});
+</script>
+{% endfor %}
+{% include p/end %}
+{% include end-figure %}
 
 ### Summary
 
