added loudness 1 example

--- a/_units/01.md
+++ b/_units/01.md
@@ -384,7 +384,7 @@ of a sound." %}
 {% capture gain %}{% cycle 1. | divided_by: nosc, "0", "0", "0", "0", "0" %}{% endcapture %}
 {% endcomment %}
 {% assign gain = 0.5 | divided_by: nosc %}
-{% include p/gain name=gname gain=gain type="sine" %}
+{% include p/gain name=gname gain=gain %}
 {% endfor %}
 
 {% assign scopename = mutor_patch_pfx | append: "scope" %}
