added loudness 2 ex

--- a/_units/03.md
+++ b/_units/03.md
@@ -497,7 +497,100 @@ where Psi is the measure of loudness of a single tone, I is the intensity (W/m^2
 
 If we hear two tones simultaneously that are separated in frequency by more than a critical band (We will discuss the critical band in detail in the next unit. For now, a good rule of thumb is that the critical band is approximately 1/3 of an octave.), the resulting loudness will be approximately equal to the sum of the loudness of each component. If, however, the two tones are within a critical band, the loudness can be approximated by applying Stephens' power law to the intensity of the sum of the loudnesses. Note that because the power in Stephens' power law is less than 1, the loudness of two closely spaced tones will be less than that of two tones well separated in frequency assuming equal amplitudes for all of the freqencies.
 
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/MUTOR_Loudness2.png" description="loudness2" %}
+{% endcomment %}
+{% include begin-figure description="Despite having the same amplitudes, we perceive these two diads as having different loudness. Which pair sounds louder to you?" %}
+{% include p/begin %}
+
+{% assign rbuttonname = mutor_patch_pfx | append: "rbutton" %}
+{% include p/rbutton name=rbuttonname items="Low Tone (344.53 Hz), High Tone (2756.25 Hz)" values="1,2" %}
+
+{% assign nosc = 2 %}
+
+{% for i in (1..nosc) %}
+{% capture o1name %}{{ mutor_patch_pfx }}oscillator1{{ i }}{% endcapture %}
+{% capture o2name %}{{ mutor_patch_pfx }}oscillator2{{ i }}{% endcapture %}
+{% capture freq1 %}{% cycle "344.53125", "400", "344.53125", "2756.25" %}{% endcapture %}
+{% capture freq2 %}{% cycle "344.53125", "400", "344.53125", "2756.25" %}{% endcapture %}
+{% include p/oscillator name=o1name freq=freq1 type="sine" %}
+{% include p/oscillator name=o2name freq=freq2 type="sine" %}
+
+{% capture gname1 %}{{ mutor_patch_pfx }}gain1{{ i }}{% endcapture %}
+{% capture gname2 %}{{ mutor_patch_pfx }}gain2{{ i }}{% endcapture %}
+{% assign gain = 0.5 | divided_by: nosc %}
+{% include p/gain name=gname1 gain=gain %}
+{% include p/gain name=gname2 gain=0.0 %}
+{% endfor %}
+
+{% comment %}
+{% assign scopename = mutor_patch_pfx | append: "scope" %}
+{% assign spectname = mutor_patch_pfx | append: "spect" %}
+{% endcomment %}
+{% assign transportname = mutor_patch_pfx | append: "transport" %}
+
+<table>
+<tr>
+{% for i in (1..nosc) %}
+<td>
+{% capture name %}{{ mutor_patch_pfx }}scope{{ i }}{% endcapture %}
+{% include p/scope name=name samps_per_pixel=1 width="290px" %}
+</td>
+{% endfor %}
+</tr>
+<tr>
+{% for i in (1..nosc) %}
+<td>
+{% capture name %}{{ mutor_patch_pfx }}spect{{ i }}{% endcapture %}
+{% include p/spectroscope name=name gain=2000.0 width="290px" %}
+</td>
+{% endfor %}
+</tr>
+<tr><td colspan="2">
+{% include p/transport name=transportname %}
+</td></tr>
+</table>
+
+<script type="text/javascript">
+let {{ mutor_patch_pfx }}gains = new Array({{ nosc }});
+</script>
+{% for i in (1..nosc) %}
+{% capture o1name %}{{ mutor_patch_pfx }}oscillator1{{ i }}{% endcapture %}
+{% capture o2name %}{{ mutor_patch_pfx }}oscillator2{{ i }}{% endcapture %}
+{% capture gname1 %}{{ mutor_patch_pfx }}gain1{{ i }}{% endcapture %}
+{% capture gname2 %}{{ mutor_patch_pfx }}gain2{{ i }}{% endcapture %}
+<script type="text/javascript">
+{{ mutor_patch_pfx }}gains[{{ i | minus: 1 }}] = {{ gname2 }};
+</script>
+{% capture scopename %}{{ mutor_patch_pfx }}scope{{ i }}{% endcapture %}
+{% capture spectname %}{{ mutor_patch_pfx }}spect{{ i }}{% endcapture %}
+
+{% include p/connect outlet=o1name inlet=gname1 %}
+{% include p/connect outlet=o2name inlet=gname1 %}
+{% include p/connect outlet=gname1 inlet=gname2 %}
+{% include p/connect outlet=gname1 inlet=scopename %}
+{% include p/connect outlet=gname1 inlet=spectname %}
+<script type="text/javascript">
+{{ gname2 }}.toDestination();
+{{ gsname }}_set({{ 0.5 | divided_by: nosc }});
+</script>
+{% endfor %}
+<script type="text/javascript">
+for(i = 0; i < {{ rbuttonname }}.length; i++){
+	{{ rbuttonname }}[i].addEventListener('click', (e)=>{
+		for(i = 0; i < {{ rbuttonname }}.length; i++){
+			if({{ rbuttonname }}[i].value === e.target.value){
+				{{ mutor_patch_pfx }}gains[i].gain.rampTo(1, .05);
+			}else{
+				{{ mutor_patch_pfx }}gains[i].gain.rampTo(0, .05);
+			}
+		}
+	});
+}
+</script>
+
+{% include p/end %}
+{% include end-figure %}
 
 ## Loudness And Spectra
 
