added loudness 4 examples

--- a/_units/03.md
+++ b/_units/03.md
@@ -724,7 +724,16 @@ Audio example 1: The tuba from figure 3.10.
 
 In addition to the spectral integration we just discussed, the ear also performs a kind of temporal integration. If we hear a very short sound, say 50 ms long, and then hear the same sound for a longer duration, say 200 ms, the latter will appear to be louder even though they both have the same amplitude. Although this effect works well for sounds less than around 250 ms, due to reasons we will discuss in a later unit, the effect is not apparent for sounds longer than around 250 ms.
 
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/MUTOR_Loudness4.png" description="loudness4" %}
+{% endcomment %}
+{% include begin-figure description="In this example, you will hear a sequence of noise bursts, a short one followed by a long one. Which one sounds louder?" %}
+{% include p/xwaveform-scope src="/MUTOR/assets/audios/noisebursts.wav" %}
+{% include end-figure %}
+
+{% include begin-figure description="In this example, you will hear a sequence of sine tone bursts, a short one followed by a long one. Which one sounds louder?" %}
+{% include p/xwaveform-scope src="/MUTOR/assets/audios/sinebursts.wav" %}
+{% include end-figure %}
 
 ## Loudness Cues
 
