--- a/_units/03.md
+++ b/_units/03.md
@@ -770,21 +770,21 @@ An interesting experiment was carried out at the Center for New Music and Audio 
 
 Reverberation (or reverb) is the result of sounds reflecting off of the surfaces of an enclosed space. Imagine that we make a loud noise (by firing a starter's pistol or poping a balloon) in a cathedral or a hall. The first sound that a listener would hear is called the direct sound (figures 3.12-3.14).
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-nosound.png" description="A listener in a room in which a loud short sound is made." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-nosound.png" description="A listener in a room in which a loud short sound is made." width="450px" %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-direct.png" description="The first sound to hit the listener is called the direct sound." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-direct.png" description="The first sound to hit the listener is called the direct sound." width="450px" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-plot.png" description="The direct sound from figure 3.13." width="450px" %}
 
 The direct sound is followed by a number of early reflections that arive at the listener after some delay and loss of energy (figures 3.15-3.16). The length of the delay and the amount of energy lost are dependant on the size of the room and the type of material used to make the surfaces (the walls, floor, and ceiling).
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-1stRef.png" description="The early reflections arrive at the listener after a short delay and with some loss of energy." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-1stRef.png" description="The early reflections arrive at the listener after a short delay and with some loss of energy." width="450px" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-early-plot.png" description="The early reflections from figure 4 plotted against time." width="450px" %}
 
 As these early reflections continue to bounce off the surfaces they begin to pile up and overlap creating reverb (figures 3.17-3.18).
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-reverb.png" description="Reverb is as the original sound continues to bounce around the room, we perceive reverb." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-reverb.png" description="Reverb is as the original sound continues to bounce around the room, we perceive reverb." width="450px" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit3_reverb-plot.png" description="The reverb in a room tends to decay exponentially." width="450px" %}
 
