added missing noise and sine burst files, and fixed some bugs in the webaudio patches in unit 3

--- a/_units/03.md
+++ b/_units/03.md
@@ -445,7 +445,9 @@ let {{ mutor_patch_pfx }}gains = new Array({{ nosc }});
 {% include p/connect outlet=gname1 inlet=spectname %}
 <script type="text/javascript">
 {{ gname2 }}.toDestination();
+{% comment %}
 {{ gsname }}_set({{ 0.5 | divided_by: nosc }});
+{% endcomment %}
 </script>
 {% endfor %}
 <script type="text/javascript">
@@ -572,7 +574,6 @@ let {{ mutor_patch_pfx }}gains = new Array({{ nosc }});
 {% include p/connect outlet=gname1 inlet=spectname %}
 <script type="text/javascript">
 {{ gname2 }}.toDestination();
-{{ gsname }}_set({{ 0.5 | divided_by: nosc }});
 </script>
 {% endfor %}
 <script type="text/javascript">
@@ -677,7 +678,9 @@ let {{ mutor_patch_pfx }}gains = new Array({{ nosc }});
 {% include p/connect outlet=gname1 inlet=spectname %}
 <script type="text/javascript">
 {{ gname2 }}.toDestination();
+{% comment %}
 {{ gsname }}_set({{ 0.5 | divided_by: nosc }});
+{% endcomment %}
 </script>
 {% endfor %}
 <script type="text/javascript">
