--- a/_units/08.md
+++ b/_units/08.md
@@ -268,7 +268,12 @@ To fit all four kinds of melodic textures onto the texture space:
 
 This texture space may be used to predict different musical styles. Different genres of music tend to occupy distinct areas of texture space, as shown below:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_texturespace.jpg" description="Various Musical Genres projected onto Texture Space (image source: http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html)" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_texturespace.jpg" description="Various Musical Genres projected onto Texture Space " %}
+
+{% comment %}
+(image source: http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html)
+this link is not working
+{% endcomment %}
 
 # References
 
