--- a/_units/04.md
+++ b/_units/04.md
@@ -132,10 +132,22 @@ For example, in common practice tonal music, a fourth that appears as the
 lowest interval of a harmony is considered a dissonance and must be 
 prepared and resolved properly, while a fourth that appears between the 
 inner or upper voices is considered consonant and needs no special treatement.
-{% include note author="jm" text="need an audio example of these chords" %}
+
 {% include img-figure url="/MUTOR/assets/images/fourths.png" 
 description="In common practice tonality, a fourth between the bottom voices 
 is dissonant, while one in the inner voices is consonant." width="300px" %}
+
+{% include begin-figure description="C major chord 2 inv." %}
+<audio controls>
+<source src="/MUTOR/assets/audios/Cmaj_2inv.wav" type="audio/mpeg">
+</audio>
+{% include end-figure %}
+
+{% include begin-figure description="C major chord 2 inv." %}
+<audio controls>
+<source src="/MUTOR/assets/audios/Cmaj_1inv.wav" type="audio/mpeg">
+</audio>
+{% include end-figure %}
 
 This suggests that context matters, and the attribution of "dissonant" or
 "consonant" to an interval, the physical, sounding object, 
