--- a/_units/02.md
+++ b/_units/02.md
@@ -311,6 +311,9 @@ While various animals are able to hear and have auditory systems, only a few spe
 
 While the act of music making is universal to all cultures in human society, only a few species of animals are known to make music systematically. Nonhuman species that sing include birds, whales, and monkeys.
 
+{% include begin-figure description="Sianmang vocalizing" %}
+{% include p/xsonogram src="/MUTOR/assets/audios/unit2-Siamang.mp3" %}
+{% include end-figure %}
 
 {% include mov-figure src="/MUTOR/assets/videos/unit2_musicinotherspecies.mp4" type="mp4" description="Maxpatch example: spectrum and sonogram." width="600px" %}
 
