--- a/_units/05.md
+++ b/_units/05.md
@@ -249,7 +249,9 @@ Interestingly, Arnold Schönberg in his book "Structural Functions of Harmony" d
 
 At the University of California, Berkeley, David Wessel has inspired the development of a Max patch that uses the opposite approach: users move their mouse over the surface of the torus, controlling a generative process that generates profiles according to the melodies; the height of each bar for a given tone determines the frequency of its appearance. This makes it possible to continuously modulate from key to key. In the lower illustration, the torus has been cut in two dimensions and "laid flat".
 
+{% comment %}
 {% include note author="gh" text="Images of Key Space Max patch need to be inserted here" %}
+{% endcomment%}
 
 ## Music Analysis
 
