Replace 2.11 ihc_ohc.png

--- a/_units/02.md
+++ b/_units/02.md
@@ -138,6 +138,7 @@ In its resting state, the basilar and tectorial membranes are parallel, the ster
 {% comment %} Close-up of inner hair cells with stereocilia, which open when excited by incoming sound. {% endcomment%}
 
 {% include img-figure url="/MUTOR/assets/images/ihc_ohc.png" description="Inner and Outer Hair Cells" width="400px" %}
+(Adapted from: https://wellcomecollection.org/works/sr3ru95y)
 {% comment %} Electron microscropy showing one row of inner hair cells and three rows of outer hair cells. {% endcomment%}
 
 # Tonotopic Mapping
