--- a/_units/08.md
+++ b/_units/08.md
@@ -121,7 +121,7 @@ We perceive the white dots as one group and the black dots as another group; thi
 ## Symmetry
 -- symmetrical figures are perceived as being grouped together.
  The pair of shapes on the left is more likely to be perceived as a group compared to the pair on the right; this is because the left pair is symmetrical around the dotted line whereas the right pair is asymmetrical. 
- {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.gif" description="Principle of symmetry" width="400px" %}
+ {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.png" description="Principle of symmetry" width="400px" %}
 ## Proximity
 - elements that are close together are more likely to be grouped together.
 The dots that are closer together are perceived as being grouped together.
@@ -129,7 +129,7 @@ The dots that are closer together are perceived as being grouped together.
 ## Good continuation
 - we tend to perceive figures as being continuous.
  The red diagonal is perceived as one line instead of two, due to the principle of good continuation.
-{% include img-figure url="/MUTOR/assets/images/unit8_goodcontinuation.gif" description="Principle of good continuation" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_goodcontinuation.png" description="Principle of good continuation" width="400px" %}
 ## Closure
 - we tend to see complete figures despite missing parts.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="Principle of closure" %}
