changes to the spectroscope code to make it scale better. added a small waveform + spectroscope display. refactored the lib into a js file and the wrapper that just includes it

--- a/_units/01.md
+++ b/_units/01.md
@@ -290,17 +290,17 @@ description="Two sinusoids, one with variable phase with respect to the other." 
 </td></tr><tr><td>
 {% include p/scope name=fixedscopename samps_per_pixel=1 width="290px" %}
 </td><td>
-{% include p/spectroscope name=fixedspectname gain="500." width="290px" %}
+{% include p/spectroscope name=fixedspectname gain="1.0" width="290px" %}
 </td><td>
 </td></tr><tr><td>
 {% include p/scope name=moveablescopename samps_per_pixel=1 width="290px" %}
 </td><td>
-{% include p/spectroscope name=moveablespectname gain="500." width="290px" %}
+{% include p/spectroscope name=moveablespectname gain="1.0" width="290px" %}
 </td><td>
 </td></tr><tr><td>
 {% include p/scope name=sumscopename samps_per_pixel=1 width="290px" %}
 </td><td>
-{% include p/spectroscope name=sumspectname gain="500." width="290px" %}
+{% include p/spectroscope name=sumspectname gain="1.0" width="290px" %}
 </td><td>
 {% include p/slider name=gainslidername min="0" max="0.5" %}
 </td></tr><tr><td colspan=2 style="text-align:left">
@@ -411,7 +411,7 @@ Phases (0-360):
 <tr><td colspan="2">
 {% include p/scope name=scopename samps_per_pixel=1 %}
 </td></tr><tr><td colspan="2">
-{% include p/spectroscope name=spectname gain=2500.0 %}
+{% include p/spectroscope name=spectname gain="1.0" %}
 </td></tr><tr><td colspan="2">
 {% include p/transport name=transportname %}
 </td></tr>
@@ -618,7 +618,7 @@ You could do this with something as short as a recording of a pluck of a single 
 on a banjo or an entire symphony.
 
 {% include begin-figure description="Spectrum of a Trombone playing" %}
-{% include p/xspectroscope src="/MUTOR/assets/audios/trombone.mp3" gain="6000." %}
+{% include p/xspectroscope src="/MUTOR/assets/audios/trombone.mp3" gain="1.0" %}
 {% include end-figure %}
 
 Looking at a sound's spectrum, we now have a more clear view of the frequency composition of a signal.
@@ -645,11 +645,11 @@ Looking at the images below, we are unable to see anything distinct in the timbr
 of a short clip of a clarinet versus an oboe in the time domain.
 
 {% include begin-figure description="Clarinet C5 Time Domain vs Frequeny Domain" %}
-{% include p/xwaveform-spectroscope src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" gain="6000." %}
+{% include p/xwaveform-spectroscope src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" gain="1.0" %}
 {% include end-figure %}
 
 {% include begin-figure description="Oboe C5 Time Domain vs Frequeny Domain" %}
-{% include p/xwaveform-spectroscope src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3" gain="6000." %}
+{% include p/xwaveform-spectroscope src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3" gain="1.0" %}
 {% include end-figure %}
 
 {% comment %}
