--- a/_units/03.md
+++ b/_units/03.md
@@ -414,7 +414,7 @@ Although much information about the nature of sounds can be gleaned by studying 
 {% for i in (1..nosc) %}
 <td>
 {% capture name %}{{ mutor_patch_pfx }}spect{{ i }}{% endcapture %}
-{% include p/spectroscope name=name gain=2000.0 width="290px" %}
+{% include p/spectroscope name=name gain="1.0" width="290px" %}
 </td>
 {% endfor %}
 </tr>
@@ -544,7 +544,7 @@ If we hear two tones simultaneously that are separated in frequency by more than
 {% for i in (1..nosc) %}
 <td>
 {% capture name %}{{ mutor_patch_pfx }}spect{{ i }}{% endcapture %}
-{% include p/spectroscope name=name gain=2000.0 width="290px" %}
+{% include p/spectroscope name=name gain="1.0" width="290px" %}
 </td>
 {% endfor %}
 </tr>
@@ -647,7 +647,7 @@ for(i = 0; i < 50; i++){
 {% for i in (1..nosc) %}
 <td>
 {% capture name %}{{ mutor_patch_pfx }}spect{{ i }}{% endcapture %}
-{% include p/spectroscope name=name gain=2000.0 width="290px" %}
+{% include p/spectroscope name=name gain="1.0" width="290px" %}
 </td>
 {% endfor %}
 </tr>
